@@ -28,8 +28,8 @@ $view = JRequest::getCmd('view',null);
 $popup_upload = JRequest::getCmd('pop_up',null);
 $path = "file_path";
 if (substr(strtolower($view),0,6) == "images" || $popup_upload == 1) $path = "image_path";
-define('COM_MEDIA_BASE',    JPATH_ROOT.DS.$params->get($path, 'images/stories'));
-define('COM_MEDIA_BASEURL', JURI::root().$params->get($path, 'images/stories'));
+define('COM_MEDIA_BASE',    JPATH_ROOT.DS.$params->get($path, 'images'));
+define('COM_MEDIA_BASEURL', JURI::root().$params->get($path, 'images'));
 
 // Require the base controller
 require_once JPATH_COMPONENT.DS.'controller.php';
