@@ -635,7 +635,7 @@ PAGE WAS GENERATED IN=Page was generated in
 PARAMETER CONTROL=Parameter Control
 PARAMETERS=Parameters
 PARAMENABLED=Enable this Plug-in.
-PARAMMENUIMAGE=A small image to be placed beside your Menu Item. Images must be in images/stories/
+PARAMMENUIMAGE=A small image to be placed beside your Menu Item. Images must be in images/
 PARAMPAGECLASSSFX=A suffix to be applied to the CSS classes of the page. This allows individual page styling.
 PARAMPAGETITLE=Text to display as the Page title. If left blank, a default title will be used instead.
 PARAMPAGEHEADER=Text to display at the top of the page. If left blank, the Menu title will be used instead.
