@@ -25,8 +25,8 @@ if (!$user->authorize('com_media', 'popup')) {
 }
 
 // Set the path definitions
-define('COM_MEDIA_BASE',    JPATH_ROOT.DS.$params->get('image_path', 'images'.DS.'stories'));
-define('COM_MEDIA_BASEURL', JURI::root(true).'/'.$params->get('image_path', 'images/stories'));
+define('COM_MEDIA_BASE',    JPATH_ROOT.DS.$params->get('image_path', 'images'));
+define('COM_MEDIA_BASEURL', JURI::root(true).'/'.$params->get('image_path', 'images'));
 
 // Load the admin HTML view
 require_once JPATH_COMPONENT_ADMINISTRATOR.DS.'helpers'.DS.'media.php';
