@@ -12,7 +12,7 @@ LINK=Link
 MOD_RANDOM_IMAGE=Images - Random image
 NO IMAGES=No Images
 PARAMHEIGHTPX=Image Height forces all images to be displayed with the height in pixels.
-PARAMIMAGEFOLDER=Path to the image folder relative to the site URL (e.g. images/stories).
+PARAMIMAGEFOLDER=Path to the image folder relative to the site URL (e.g. images).
 PARAMLINK=A URL to redirect to if the image is clicked upon (e.g. http://www.joomla.org).
 PARAMWIDTHPX=Image Width forces all images to be displayed with this width in pixels.
 RANDOM IMAGE=Random Image
