@@ -16,9 +16,9 @@ $cparams =& JComponentHelper::getParams('com_media');
 <?php if ($this->category->image || $this->category->description) : ?>
 	<div class="contentdescription<?php echo $this->escape($this->params->get('pageclass_sfx')); ?>">
 	<?php if ($this->params->get('image') != -1 && $this->params->get('image') != '') : ?>
-		<img src="<?php echo $this->baseurl .'/'. 'images/stories' . '/'. $this->params->get('image'); ?>" align="<?php echo $this->params->get('image_align'); ?>" hspace="6" alt="<?php echo JText::_( 'Contacts' ); ?>" />
+		<img src="<?php echo $this->baseurl .'/'. 'images' . '/'. $this->params->get('image'); ?>" align="<?php echo $this->params->get('image_align'); ?>" hspace="6" alt="<?php echo JText::_( 'Contacts' ); ?>" />
 	<?php elseif ($this->category->image) : ?>
-		<img src="<?php echo $this->baseurl .'/'. 'images/stories' . '/'. $this->category->image; ?>" align="<?php echo $this->category->image_position; ?>" hspace="6" alt="<?php echo JText::_( 'Contacts' ); ?>" />
+		<img src="<?php echo $this->baseurl .'/'. 'images' . '/'. $this->category->image; ?>" align="<?php echo $this->category->image_position; ?>" hspace="6" alt="<?php echo JText::_( 'Contacts' ); ?>" />
 	<?php endif; ?>
 	<?php echo $this->category->description; ?>
 	</div>
